[package]
name = "github_oauth_server_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.10.2"
dotenv = "0.15"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
log = "0.4.27"